Add React components and render initial content

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>React</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js" defer></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" defer></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js" defer></script>
 </head>
 
 <body>
-
+    <div id="root"></div>
+    <script src="script.js" defer type="text/babel"></script>
 </body>
 
 </html>
